--- a/templates/challenges.phtml
+++ b/templates/challenges.phtml
@@ -43,7 +43,7 @@
                     <div class="card-title-wrapper">
                         <h4><?= htmlspecialchars($challenge['title']) ?></h4>
                         <span class="difficulty-tag <?= $difficulty_class ?>">
-                            <?= htmlspecialchars($challenge['points']) ?> pts
+                            <?= htmlspecialchars($challenge['points']) ?> <i class="fas fa-flag"></i>
                         </span>
                     </div>
                 </div>
