--- a/templates/index.phtml
+++ b/templates/index.phtml
@@ -24,7 +24,7 @@
         <section class="intro">
             <div class="text-intro">
                 <h2>Apprends la cybersécurité <br><span id="dynamic-text" class="glitch" data-text="en ligne">en ligne</span></br></h2>
-                <h3>Créé par le <em>Kr[HACK]en</em> (club de cybersécurité de l'ESISAR) pour accompagner les étudiants dans leur apprentissage de débutant à expert</h3>
+                <h3>La plateforme de référence du Kr[HACK]en (club de cybersécurité de l'ESISAR) pour accompagner les étudiants dans leur apprentissage, de débutant à expert.</h3>
             </div>
             <div class="image-intro">
                 <img src="/images/krhacken_laurier.webp" alt="Logo du club Krhacken avec des lauriers"/>
@@ -78,7 +78,7 @@
                                 <h4>Scénarios</h4>
                             </div>
                             <div class="box-info">
-                                <p>Immergez vous dans des simulations d'attaques pour apprendre à utiliser des outils et comprendre les chaînes d'exploitation.</p>
+                                <p>Confrontez-vous à des scénarios complexes où vous devrez tantôt exploiter des vulnérabilités, tantôt mener l'enquête.</p>
                                 <ul>
                                     <li><i class="far fa-check-square checkbox-icon" aria-hidden="true"></i>Cyber-attaques guidées</li>
                                     <li><i class="far fa-check-square checkbox-icon" aria-hidden="true"></i>Découverte d'outils</li>
