--- a/templates/challenge-page.phtml
+++ b/templates/challenge-page.phtml
@@ -1,3 +1,4 @@
+<?php require_once ROOT_PATH . '/src/helpers.php'; ?>
 <!DOCTYPE html>
 <html lang="fr">
 <head>
@@ -13,15 +14,10 @@
 <body class="page-challenge">
 
     <?php
-    $points = $challenge['points'];
-    $difficulty_class = '';
-    if ($points >= 250) { $difficulty_class = 'difficulty-expert'; }
-    elseif ($points >= 100) { $difficulty_class = 'difficulty-hard'; }
-    elseif ($points >= 50) { $difficulty_class = 'difficulty-medium'; }
-    else { $difficulty_class = 'difficulty-easy'; }
+        $difficulty_class = getDifficultyClass($challenge['points']);
     ?>
 
-    <a href="/lessons" onclick="history.back(); return false;" class="btn-glass back-button">
+    <a href="/challenges" onclick="history.back(); return false;" class="btn-glass back-button">
         <i class="fas fa-arrow-left" aria-hidden="true"></i> Retour aux challenges
     </a>
 
@@ -33,7 +29,7 @@
                     <h1><?= htmlspecialchars($challenge['title']) ?></h1>
                 </div>
                 <span class="difficulty-tag <?= $difficulty_class ?>">
-                    <?= htmlspecialchars($challenge['points']) ?> pts
+                    <?= htmlspecialchars($challenge['points']) ?> <i class="fas fa-flag"></i>
                 </span>
             </header>
             
