--- a/public/css/widget.css
+++ b/public/css/widget.css
@@ -229,3 +229,12 @@ header.header-active ~ .leaderboard-panel {
         background-color: rgba(255, 255, 255, 0.1);
     }
 }
+
+
+.profile-avatar {
+    width: 36px;
+    height: 36px;
+    border-radius: 50%;
+    object-fit: cover; /* Assure que l'image remplit le cercle sans être déformée */
+    border: 2px solid rgba(255, 255, 255, 0.5);
+}
