--- a/templates/challenge-page.phtml
+++ b/templates/challenge-page.phtml
@@ -1,13 +1,10 @@
+<?php
+$pageTitle = htmlspecialchars($challenge['title']) . ' - Kr[HACK]ademy';
+$specific_css = ['/css/content-page.css'];
+?>
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <title><?= htmlspecialchars($challenge['title']) ?> - Kr[HACK]ademy</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"/>
-    <link rel="stylesheet" href="/css/style.css"/>
-    <link rel="stylesheet" href="/css/content-page.css"/>
-    <link rel="icon" type="image/png" href="/images/logo_krhacken_r.ico" />
-</head>
+<?php require __DIR__ . '/partials/head.phtml'; ?>
 <body class="page-challenge">
     <a href="/challenges" class="btn-glass back-button"><i class="fas fa-arrow-left"></i> Retour aux challenges</a>
     <main class="content-container">
@@ -16,7 +13,6 @@
             $item = $challenge;
             $type = 'challenge';
             require __DIR__ . '/partials/content-page-header.phtml';
-
             $filename = basename($challenge['challenge_id_str']) . '.html';
             if (strpos($filename, '/') !== false || strpos($filename, '\\') !== false) {
                 echo '<section class="content-block"><p>Erreur: Chemin de fichier invalide.</p></section>';
