--- a/templates/lessons.phtml
+++ b/templates/lessons.phtml
@@ -1,14 +1,11 @@
+<?php
+$pageTitle = 'Leçons - Kr[HACK]ademy';
+$specific_css = ['/css/shared-components.css'];
+?>
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <title>Leçons - Kr[HACK]ademy</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"/>
-    <link rel="stylesheet" href="/css/style.css"/>
-    <link rel="stylesheet" href="/css/shared-components.css"/>
-    <link rel="icon" type="image/png" href="/images/logo_krhacken_r.ico" />
-</head>
-<body>
+<?php require __DIR__ . '/partials/head.phtml'; ?>
+<body data-user-logged-in="<?= isset($_SESSION['user_id']) ? 'true' : 'false'; ?>">
     <?php require __DIR__ . '/partials/header.phtml'; ?>
     <main class="main">
         <?php
@@ -18,6 +15,7 @@
         ?>
     </main>
     <?php require __DIR__ . '/partials/footer.phtml'; ?>
+    <script src="/js/progress-tracker.js" defer></script>
     <?php require __DIR__ . '/partials/modal.phtml';?>
 </body>
 </html>
