--- a/templates/partials/auth-header.phtml
+++ b/templates/partials/auth-header.phtml
@@ -1,24 +1,13 @@
 <?php
-if (session_status() === PHP_SESSION_NONE) {
-    session_start();
-}
+$specific_css = ['/css/auth.css'];
 ?>
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <title><?= htmlspecialchars($pageTitle) ?> - Kr[HACK]ademy</title>
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/auth.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"/>
-    <link rel="icon" type="image/png" href="/images/logo_krhacken_r.ico" />
-</head>
+<?php require __DIR__ . '/head.phtml'; ?>
 <body class="auth-page">
-
     <a href="/lessons" onclick="history.back(); return false;" class="btn-glass back-button">
-        <i class="fas fa-arrow-left" aria-hidden="true"></i> Retour
+        <i class="fas fa-arrow-left"></i> Retour
     </a>
-
     <div class="auth-container">
         <div class="auth-content">
             <h1 class="site-title">Kr[HACK]ademy</h1>
