--- a/templates/scenarios.phtml
+++ b/templates/scenarios.phtml
@@ -1,33 +1,17 @@
-<?php require_once ROOT_PATH . '/src/helpers.php'; ?>
+<?php
+$pageTitle = 'Scénarios - Kr[HACK]ademy';
+$specific_css = ['/css/shared-components.css'];
+?>
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <title>Scénarios - Kr[HACK]ademy</title>
-    
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"/>
-    <link rel="stylesheet" href="/css/style.css"/>
-    
-    <link rel="stylesheet" href="/css/shared-components.css"/>
-
-    <link rel="icon" type="image/png" href="/images/logo_krhacken_r.ico" />
-</head>
-<body data-user-logged-in="<?php echo isset($_SESSION['user_id']) ? 'true' : 'false'; ?>">
-
+<?php require __DIR__ . '/partials/head.phtml'; ?>
+<body data-user-logged-in="<?= isset($_SESSION['user_id']) ? 'true' : 'false'; ?>">
     <?php require __DIR__ . '/partials/header.phtml'; ?>
-
     <main class="main">
-        <?php
-        $currentCategory = null; 
-        ?>
-
         <h2 class="construction">page en construction</h2>
     </main>
-
     <?php require __DIR__ . '/partials/footer.phtml'; ?>
-    
     <script src="/js/progress-tracker.js" defer></script>
-
     <?php require __DIR__ . '/partials/modal.phtml';?>
 </body>
 </html>
